fix docker config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,19 +6,14 @@ services:
     image: postgres:13
     container_name: sm_postgres
     restart: unless-stopped
-    volumes:
-      - type: bind
-        source: ./
-        target: /app
-      - postgres-data:/var/lib/postgresql/data
     networks:
       freedom_net:
-        ipv4_address: 172.16.238.2
+        ipv4_address: 172.16.110.2
     environment:
-      POSTGRES_DB: freedom
-      POSTGRES_USER: django
-      POSTGRES_PASSWORD: django
-      PGPASSWORD: django
+      POSTGRES_DB: machine
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: pass
+      PGPASSWORD: pass
     ports:
       - 5432:5432
   
@@ -28,14 +23,14 @@ services:
     restart: always
     networks:
       freedom_net:
-        ipv4_address: 172.16.238.3
+        ipv4_address: 172.16.110.3
     volumes:
       - type: bind
         source: ./
         target: /app
       - ./deploy/docker-nginx.conf:/etc/nginx/conf.d/default.conf
     ports:
-      - 8080:8080
+      - 8000:80
   
   sm_backend:
     build:
@@ -49,16 +44,16 @@ services:
         target: /app
     networks:
       freedom_net:
-        ipv4_address: 172.16.238.4
+        ipv4_address: 172.16.110.4
     working_dir: /app/backend
-    command: python3 manage.py runserver 0.0.0.0:80
+    command: python3 manage.py runserver 172.16.110.4:80
     environment:
-      - FREEDOM_DEBUG=True
-      - FREEDOM_DB_HOST=sm_postgres
-      - FREEDOM_DB_NAME=freedom
-      - FREEDOM_DB_USER=django
-      - FREEDOM_DB_PASS=django
-      - FREEDOM_DB_PORT=5432
+      - DEBUG=True
+      - DB_HOST=sm_postgres
+      - DB_NAME=machine
+      - DB_USER=user
+      - DB_PASS=pass
+      - DB_PORT=5432
     depends_on:
       - sm_postgres
       - sm_nginx
@@ -75,14 +70,14 @@ services:
         target: /app
     networks:
       freedom_net:
-        ipv4_address: 172.16.238.5
+        ipv4_address: 172.16.110.5
     working_dir: /app/frontend
     command: gulp # TODO: GULP
     environment:
-      - DB_HOST=postgres
-      - DB_NAME=freedom
-      - DB_USER=django
-      - DB_PASS=django
+      - DB_HOST=sm_postgres
+      - DB_NAME=machine
+      - DB_USER=user
+      - DB_PASS=pass
     depends_on:
       - sm_backend
 
@@ -98,18 +93,17 @@ services:
         target: /app
     networks:
       freedom_net:
-        ipv4_address: 172.16.238.6
+        ipv4_address: 172.16.110.6
     working_dir: /app/spyder
-    command: cat /dev/zero # python3 bot.py --start_url=https://ru.wikipedia.org/wiki/Заглавная_страница --spyder_name=spyder_1
+    command: python3 bot.py --start_url=https://mail.ru --spyder_name=spyder_1
     environment:
-      - FREEDOM_DB_HOST=sm_postgres
-      - FREEDOM_DB_NAME=freedom
-      - FREEDOM_DB_USER=django
-      - FREEDOM_DB_PASS=django
-      - FREEDOM_DB_PORT=5432
+      - DB_HOST=sm_postgres
+      - DB_NAME=machine
+      - DB_USER=user
+      - DB_PASS=pass
+      - DB_PORT=5432
     depends_on:
       - sm_postgres
-      - sm_nginx
 
   sm_spyder_2:
     build:
@@ -123,17 +117,17 @@ services:
         target: /app
     networks:
       freedom_net:
-        ipv4_address: 172.16.238.7
+        ipv4_address: 172.16.110.7
     working_dir: /app/spyder
-    command: cat /dev/zero # python3 bot.py --start_url=https://mail.ru --spyder_name=spyder_2
+    command: python3 bot.py --start_url=https://ru.wikipedia.org/wiki/Заглавная_страница --spyder_name=spyder_2
     environment:
       - DB_HOST=sm_postgres
-      - DB_NAME=freedom
-      - DB_USER=django
-      - DB_PASS=django
+      - DB_NAME=machine
+      - DB_USER=user
+      - DB_PASS=pass
+      - DB_PORT=5432
     depends_on:
       - sm_postgres
-      - sm_nginx
 
   sm_spyder_3:
     build:
@@ -147,20 +141,17 @@ services:
         target: /app
     networks:
       freedom_net:
-        ipv4_address: 172.16.238.8
+        ipv4_address: 172.16.110.8
     working_dir: /app/spyder
     command: python3 bot.py --start_url=https://petrosian.ru --spyder_name=spyder_3
     environment:
       - DB_HOST=sm_postgres
-      - DB_NAME=freedom
-      - DB_USER=django
-      - DB_PASS=django
+      - DB_NAME=machine
+      - DB_USER=user
+      - DB_PASS=pass
+      - DB_PORT=5432
     depends_on:
       - sm_postgres
-      - sm_nginx
-
-volumes:
-  postgres-data:
 
 networks:
   freedom_net:
@@ -170,5 +161,5 @@ networks:
     ipam:
       driver: default
       config:
-      - subnet: 172.16.238.0/24
-        gateway: 172.16.238.1
+      - subnet: 172.16.110.0/24
+        gateway: 172.16.110.1
