--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,7 +77,7 @@ services:
       freedom_net:
         ipv4_address: 172.16.110.5
     working_dir: /app/frontend
-    command: gulp # TODO: GULP
+    command: /bin/bash /app/deploy/init_frontend
     environment:
       - DB_HOST=sm_postgres
       - DB_NAME=machine
