frontend worked with docker

--- a/deploy/docker-nginx.conf
+++ b/deploy/docker-nginx.conf
@@ -1,11 +1,21 @@
-upstream backend { server 172.16.110.4:80 fail_timeout=0; }
+upstream backend { server 172.16.110.5:80 fail_timeout=0; }
 
 # make backend
 server {
-	server_name freedom.org;
+	server_name freedom;
 
 	listen 80 default_server;
 
+	root /app/frontend/dist;
+	location =/ {
+		add_header 'Access-Control-Allow-Origin' "*";  # TODO: нужно прописать нормальный хост
+		root /app/frontend/dist;
+		try_files $uri $uri/ /index.html;
+	}
+}
+
+server {
+	server_name api.freedom;
 
 	location /  {
 		if ($request_method = 'OPTIONS') {
@@ -15,6 +25,8 @@ server {
 			add_header 'Access-Control-Allow-Headers' 'Cookie,Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Mx-ReqToken,X-Requested-With';
 			return 204;
 		}
+
+		add_header 'Access-Control-Allow-Origin' "*";  # TODO: нужно прописать нормальный хост
 
 		client_max_body_size 100M;
 
@@ -26,4 +38,3 @@ server {
 		proxy_pass http://backend;
 	}
 }
-
