--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,8 +34,29 @@ services:
         source: ./
         target: /app
       - ./deploy/docker-nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./deploy/hosts:/etc/hosts
     ports:
       - 8000:80
+  
+  sm_frontend:
+    build:
+      context: .
+      dockerfile: ./Dockerfile
+    container_name: sm_frontend
+    volumes:
+      - type: bind
+        source: ./
+        target: /app
+    networks:
+      freedom_net:
+        ipv4_address: 172.16.110.4
+    working_dir: /app/frontend
+    command: /bin/bash /app/deploy/init_frontend
+    environment:
+      - DB_HOST=sm_postgres
+      - DB_NAME=machine
+      - DB_USER=user
+      - DB_PASS=pass
   
   sm_backend:
     build:
@@ -49,9 +70,9 @@ services:
         target: /app
     networks:
       freedom_net:
-        ipv4_address: 172.16.110.4
+        ipv4_address: 172.16.110.5
     working_dir: /app/backend
-    command: python3 manage.py runserver 172.16.110.4:80
+    command: python3 manage.py runserver 172.16.110.5:80
     environment:
       - DEBUG=True
       - DB_HOST=sm_postgres
@@ -62,29 +83,7 @@ services:
     depends_on:
       - sm_postgres
       - sm_nginx
-  
-  sm_frontend:
-    build:
-      context: .
-      dockerfile: ./Dockerfile
-    container_name: sm_frontend
-    restart: unless-stopped
-    volumes:
-      - type: bind
-        source: ./
-        target: /app
-    networks:
-      freedom_net:
-        ipv4_address: 172.16.110.5
-    working_dir: /app/frontend
-    command: /bin/bash /app/deploy/init_frontend
-    environment:
-      - DB_HOST=sm_postgres
-      - DB_NAME=machine
-      - DB_USER=user
-      - DB_PASS=pass
-    depends_on:
-      - sm_backend
+      - sm_frontend
 
   sm_spyder_1:
     build:
