--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
         target: /app
       - ./deploy/docker-nginx.conf:/etc/nginx/conf.d/default.conf
       - ./deploy/hosts:/etc/hosts
+      - ./deploy/bashrc:/root/.bashrc
     ports:
       - 8000:80
   
@@ -47,6 +48,7 @@ services:
       - type: bind
         source: ./
         target: /app
+      - ./deploy/bashrc:/root/.bashrc
     networks:
       freedom_net:
         ipv4_address: 172.16.110.4
@@ -68,6 +70,7 @@ services:
       - type: bind
         source: ./
         target: /app
+      - ./deploy/bashrc:/root/.bashrc
     networks:
       freedom_net:
         ipv4_address: 172.16.110.5
@@ -95,6 +98,7 @@ services:
       - type: bind
         source: ./
         target: /app
+      - ./deploy/bashrc:/root/.bashrc
     networks:
       freedom_net:
         ipv4_address: 172.16.110.6
@@ -119,6 +123,7 @@ services:
       - type: bind
         source: ./
         target: /app
+      - ./deploy/bashrc:/root/.bashrc
     networks:
       freedom_net:
         ipv4_address: 172.16.110.7
@@ -143,6 +148,7 @@ services:
       - type: bind
         source: ./
         target: /app
+      - ./deploy/bashrc:/root/.bashrc
     networks:
       freedom_net:
         ipv4_address: 172.16.110.8
