--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-Django
-psycopg2-binary
-gunicorn
-pytest
-pytest-django
-PyYAML
-flower
-tzdata
-requests
-bs4
-sqlalchemy
+Django==4.2
+psycopg2-binary==2.9.6
+gunicorn==20.1.0
+pytest==7.3.1
+pytest-django==4.5.2
+PyYAML==6.0
+flower==1.2.0
+tzdata==2023.3
+requests==2.29.0
+bs4==0.0.1
+SQLAlchemy==2.0.11
