--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,9 +33,9 @@ services:
       - type: bind
         source: ./
         target: /app
-      - ./deploy/docker-nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./deploy/hosts:/etc/hosts
-      - ./deploy/bashrc:/root/.bashrc
+      - ./docker/docker-nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./docker/hosts:/etc/hosts
+      - ./docker/bashrc:/root/.bashrc
     ports:
       - 8000:80
   
@@ -48,12 +48,12 @@ services:
       - type: bind
         source: ./
         target: /app
-      - ./deploy/bashrc:/root/.bashrc
+      - ./docker/bashrc:/root/.bashrc
     networks:
       freedom_net:
         ipv4_address: 172.16.110.4
     working_dir: /app/frontend
-    command: /bin/bash /app/deploy/init_frontend
+    command: /bin/bash /app/docker/init_frontend
     environment:
       - DB_HOST=sm_postgres
       - DB_NAME=machine
@@ -70,7 +70,7 @@ services:
       - type: bind
         source: ./
         target: /app
-      - ./deploy/bashrc:/root/.bashrc
+      - ./docker/bashrc:/root/.bashrc
     networks:
       freedom_net:
         ipv4_address: 172.16.110.5
@@ -98,7 +98,7 @@ services:
       - type: bind
         source: ./
         target: /app
-      - ./deploy/bashrc:/root/.bashrc
+      - ./docker/bashrc:/root/.bashrc
     networks:
       freedom_net:
         ipv4_address: 172.16.110.6
@@ -123,7 +123,7 @@ services:
       - type: bind
         source: ./
         target: /app
-      - ./deploy/bashrc:/root/.bashrc
+      - ./docker/bashrc:/root/.bashrc
     networks:
       freedom_net:
         ipv4_address: 172.16.110.7
@@ -148,7 +148,7 @@ services:
       - type: bind
         source: ./
         target: /app
-      - ./deploy/bashrc:/root/.bashrc
+      - ./docker/bashrc:/root/.bashrc
     networks:
       freedom_net:
         ipv4_address: 172.16.110.8
@@ -162,6 +162,18 @@ services:
       - DB_PORT=5432
     depends_on:
       - sm_postgres
+  
+  sm_i2pd:
+    image: purplei2p/i2pd
+    container_name: sm_i2pd
+    restart: always
+    networks:
+      freedom_net:
+        ipv4_address: 172.16.110.9
+    volumes:
+      - ./docker/i2pd-tunnels.conf:/etc/i2pd/tunnels.conf
+    ports:
+      - 7071:7070
 
 networks:
   freedom_net:
