--- a/docker/docker-nginx.conf
+++ b/docker/docker-nginx.conf
@@ -6,14 +6,7 @@ server {
 
 	listen 80 default_server;
 
-	root /app/frontend/dist;
-	location =/ {
-		add_header 'Access-Control-Allow-Origin' "*";  # TODO: нужно прописать нормальный хост
-		root /app/frontend/dist;
-		try_files $uri $uri/ /index.html;
-	}
-
-	location /admin  {
+	location /  {
 		if ($request_method = 'OPTIONS') {
 			add_header 'Access-Control-Allow-Origin' "$http_origin";
 			add_header 'Access-Control-Allow-Credentials' 'true';
@@ -35,32 +28,7 @@ server {
 	}
 
 	# TODO: сократить инструкцию
-	location /static/admin  {
-		if ($request_method = 'OPTIONS') {
-			add_header 'Access-Control-Allow-Origin' "$http_origin";
-			add_header 'Access-Control-Allow-Credentials' 'true';
-			add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
-			add_header 'Access-Control-Allow-Headers' 'Cookie,Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Mx-ReqToken,X-Requested-With';
-			return 204;
-		}
-
-		add_header 'Access-Control-Allow-Origin' "*";  # TODO: нужно прописать нормальный хост
-
-		client_max_body_size 100M;
-
-		proxy_set_header Host $host;
-		proxy_set_header X-Real-IP $remote_addr;
-		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-
-		proxy_pass_request_headers      on;
-		proxy_pass http://backend;
-	}
-}
-
-server {
-	server_name api.freedom;
-
-	location /  {
+	location /static/  {
 		if ($request_method = 'OPTIONS') {
 			add_header 'Access-Control-Allow-Origin' "$http_origin";
 			add_header 'Access-Control-Allow-Credentials' 'true';
