--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,32 +33,11 @@ services:
       - type: bind
         source: ./
         target: /app
-      - ./deploy/docker-nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./deploy/hosts:/etc/hosts
-      - ./deploy/bashrc:/root/.bashrc
+      - ./docker/docker-nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./docker/hosts:/etc/hosts
+      - ./docker/bashrc:/root/.bashrc
     ports:
       - 8000:80
-  
-  sm_frontend:
-    build:
-      context: .
-      dockerfile: ./Dockerfile
-    container_name: sm_frontend
-    volumes:
-      - type: bind
-        source: ./
-        target: /app
-      - ./deploy/bashrc:/root/.bashrc
-    networks:
-      freedom_net:
-        ipv4_address: 172.16.110.4
-    working_dir: /app/frontend
-    command: /bin/bash /app/deploy/init_frontend
-    environment:
-      - DB_HOST=sm_postgres
-      - DB_NAME=machine
-      - DB_USER=user
-      - DB_PASS=pass
   
   sm_backend:
     build:
@@ -70,7 +49,7 @@ services:
       - type: bind
         source: ./
         target: /app
-      - ./deploy/bashrc:/root/.bashrc
+      - ./docker/bashrc:/root/.bashrc
     networks:
       freedom_net:
         ipv4_address: 172.16.110.5
@@ -86,7 +65,6 @@ services:
     depends_on:
       - sm_postgres
       - sm_nginx
-      - sm_frontend
 
   sm_crawler_1:
     build:
@@ -98,12 +76,12 @@ services:
       - type: bind
         source: ./
         target: /app
-      - ./deploy/bashrc:/root/.bashrc
+      - ./docker/bashrc:/root/.bashrc
     networks:
       freedom_net:
         ipv4_address: 172.16.110.6
     working_dir: /app/crawler
-    command: /venv/bin/python3 bot.py --start_url=https://slovardalja.net --crawler_name=crawler_1
+    command: /venv/bin/python3 bot.py --start_url=https://omfil.ru/
     environment:
       - DB_HOST=sm_postgres
       - DB_NAME=machine
@@ -113,55 +91,17 @@ services:
     depends_on:
       - sm_postgres
 
-  sm_crawler_2:
-    build:
-      context: .
-      dockerfile: ./Dockerfile
-    container_name: sm_crawler_2
-    restart: unless-stopped
-    volumes:
-      - type: bind
-        source: ./
-        target: /app
-      - ./deploy/bashrc:/root/.bashrc
+  sm_i2pd:
+    image: purplei2p/i2pd
+    container_name: sm_i2pd
+    restart: always
     networks:
       freedom_net:
-        ipv4_address: 172.16.110.7
-    working_dir: /app/crawler
-    command: /venv/bin/python3 bot.py --start_url=https://wooordhunt.ru/dic/content/ru_en --crawler_name=crawler_2
-    environment:
-      - DB_HOST=sm_postgres
-      - DB_NAME=machine
-      - DB_USER=user
-      - DB_PASS=pass
-      - DB_PORT=5432
-    depends_on:
-      - sm_postgres
-
-  sm_crawler_3:
-    build:
-      context: .
-      dockerfile: ./Dockerfile
-    container_name: sm_crawler_3
-    restart: unless-stopped
+        ipv4_address: 172.16.110.9
     volumes:
-      - type: bind
-        source: ./
-        target: /app
-      - ./deploy/bashrc:/root/.bashrc
-    networks:
-      freedom_net:
-        ipv4_address: 172.16.110.8
-    working_dir: /app/crawler
-    command: /venv/bin/python3 bot.py --start_url=https://mail.ru --crawler_name=crawler_3
-    environment:
-      - DB_HOST=sm_postgres
-      - DB_NAME=machine
-      - DB_USER=user
-      - DB_PASS=pass
-      - DB_PORT=5432
-    depends_on:
-      - sm_postgres
+      - ./docker/i2pd-tunnels.conf:/etc/i2pd/tunnels.conf
+    ports:
+      - 7071:7070
 
 networks:
   freedom_net:
